[package]
name = "advent-code-rust"
version = "0.1.0"
authors = ["justin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
rayon = "1.5.0"
regex = "1.4.5"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
