[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["justin"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hashbrown = "0.11.2"
itertools = "0.10.0"
lazy_static = "1.4.0"
regex = "1.4.5"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = false

[[bin]]
name = "advent-of-code"
path = "src/main.rs"
bench = false
