[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["Justin Maillet"]
edition = "2018"
description = "Solutions to Advent of Code puzzles in Rust programming language"
repository = "https://github.com/justy777/advent-of-code.rs"
readme = "README.md"
license = "MIT"
keywords = ["advent of code", "rust", "puzzle"]
categories = ["rust-patterns"]

[dependencies]
hashbrown = "0.11.2"
itertools = "0.10.0"
once_cell = "1.7.2"
regex = "1.4.5"
rust-crypto = "0.2.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
criterion = "0.3.4"

[[bench]]
name = "benchmarks"
harness = false

[lib]
bench = false

[[bin]]
name = "advent-of-code"
path = "src/main.rs"
bench = false
